Update ca_ES and es_ES translations

--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -7,8 +7,8 @@ msgid ""
 "Party Required cannot be set on account \"%s\" because some of its moves "
 "have no party set."
 msgstr ""
-"No es pot assignar en el compte \"%s\" un tercer perque un dels moviments no"
-" té cap tercer encara."
+"No es pot establir que el tercer sigui requerit al compte \"%s\" perquè alguns"
+" apunts encara no tenen tercer."
 
 msgctxt "field:account.account,party_required:"
 msgid "Party Required"
@@ -24,8 +24,8 @@ msgstr "Tercer requerit"
 
 msgctxt "help:account.account,party_required:"
 msgid "If set, it will ensure all move lines have a party."
-msgstr "Si s'estableix, cal que totes les línies disposin d'un tercer."
+msgstr "Si s'estableix, cal que tots els apunts tinguin un tercer."
 
 msgctxt "help:account.account.template,party_required:"
 msgid "If set, it will ensure all move lines have a party."
-msgstr "Si s'estableix, cal que totes les línies disposin d'un tercer."
+msgstr "Si s'estableix, cal que tots els apunts tinguin un tercer."
