--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -7,8 +7,8 @@ msgid ""
 "Party Required cannot be set on account \"%s\" because some of its moves "
 "have no party set."
 msgstr ""
-"No se puede asignar en la cuenta \"%s\" un tercero porque uno de los "
-"movimientos no tiene ningún tercero todavía."
+"No se puede establecer que el tercero sea requerido en la cuenta \"%s\" porqué"
+" algunos apuntes todavía no tienen tercero."
 
 msgctxt "field:account.account,party_required:"
 msgid "Party Required"
@@ -24,8 +24,8 @@ msgstr "Tercero requerido"
 
 msgctxt "help:account.account,party_required:"
 msgid "If set, it will ensure all move lines have a party."
-msgstr "Si se establece, todas las líneas deben de disponer de un tercero."
+msgstr "Si se establece, todos los apuntes deben tener un tercero."
 
 msgctxt "help:account.account.template,party_required:"
 msgid "If set, it will ensure all move lines have a party."
-msgstr "Si se establece, todas las líneas deben de disponer de un tercero."
+msgstr "Si se establece, todos los apuntes deben tener un tercero."
